--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
   <strong>Поддержать разработчика</strong> <p>
       <p>Оказать материальную помощь разработчику можно перейдя по ссылке внизу, вы будете направлены на специализированные сервисы для донатов и пожертвований.</p>
-      <div style="margin: 0px auto; background:#3f51b5; border-radius: 10%">
-      <strong><a target="_blank" style="color:#6a1b9a; text-decoration:none" href="https://donatty.com/volmaksDev">Поддержать разработчика</a></strong>>
+   <div style="margin: 0px auto; background:#546e7a; border-radius: 10%">
+     <strong><a target="_blank" style="color:#ffffff; text-decoration:none; padding: 10px 15px" href="https://donatty.com/volmaksDev">Поддержать разработчика</a></strong>
+   </div>
   </body>
   </html>
