--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
   <strong>Поддержать разработчика</strong> <p>
       <p>Оказать материальную помощь разработчику можно перейдя по ссылке внизу, вы будете направлены на специализированные сервисы для донатов и пожертвований.</p>
-   <div style="margin: 0px auto; background:#546e7a; border-radius: 10%">
-     <strong><a target="_blank" style="color:#ffffff; text-decoration:none; padding: 10px 15px" href="https://donatty.com/volmaksDev">Поддержать разработчика</a></strong>
+   <div style="display: inline-flex; margin: 0px auto; background:#546e7a; border-radius: 10px;">
+     <a target="_blank" style="display: block;color:#ffffff; text-decoration:none; padding: 10px 15px" href="https://donatty.com/volmaksDev">Поддержать разработчика</a>
    </div>
   </body>
   </html>
