--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
   </head>
   <body>
-  <strong>Поддержать разработчика</strong> <p>
+  <strong>Поддержать разработчика</strong>
       <p>Оказать материальную помощь разработчику можно перейдя по ссылке внизу, вы будете направлены на специализированные сервисы для донатов и пожертвований.</p>
    <div style="display: inline-flex; margin: 0px auto; background:#546e7a; border-radius: 10px;">
      <a target="_blank" style="display: block;color:#ffffff; text-decoration:none; padding: 10px 15px" href="https://donatty.com/volmaksDev">Поддержать разработчика</a>
